--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "nanoid": "^5.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.1.1",
     "react-router-dom": "^6.22.0",
+    "sonner": "^2.0.7",
     "wavesurfer.js": "^7.7.0"
   },
   "devDependencies": {
